--- a/ProyectoWebApp/templates/ProyectoWebApp/tienda.html
+++ b/ProyectoWebApp/templates/ProyectoWebApp/tienda.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tienda</title>
-</head>
-<body>
-    <h1>Tienda</h1>
-</body>
-</html>
+{% extends "ProyectoWebApp/base.html" %}
+
+{% load static %}
+
+{% block content %}
+
+<div>
+    <p></p>
+</div>
+
+{% endblock %}
