--- a/ProyectoWebApp/templates/ProyectoWebApp/servicios.html
+++ b/ProyectoWebApp/templates/ProyectoWebApp/servicios.html
@@ -4,8 +4,16 @@
 
 {% block content %}
 
-<div>
-    <p></p>
-</div>
+    {% for servicio in servicios %}
+
+        <div>
+            <p>
+                <h2 style="color: white;">{{servicio.titulo}}</h2>
+                <p style="color: white;">{{servicio.contenido}}</p>
+                <p><img src="{{servicio.imagen.url}}" alt="servicioimg"></p>
+            </p>
+        </div>
+
+    {% endfor %}
 
 {% endblock %}
