--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -4,8 +4,22 @@
 
 {% block content %}
 
-<div>
-    <p></p>
-</div>
+{% for post in posts %}
+
+    <section class="page-section clearfix">
+        <div class="container">
+          <div class="intro">
+            <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="{{post.imagen.url}}" alt="servicioimg" style="width: 50%;">
+            <div class="intro-text left-0 text-center bg-faded p-5 rounded">
+              <h2 class="section-heading mb-4" >
+                <span class="section-heading-lower">{{post.titulo}}</span>
+                <span class="section-heading-upper">{{post.contenido}}</span>
+              </h2>             
+            </div>
+          </div>
+        </div>
+      </section>
+
+    {% endfor %}
 
 {% endblock %}
