--- a/ProyectoWebApp/static/ProyectoWebApp/css/gestion.css
+++ b/ProyectoWebApp/static/ProyectoWebApp/css/gestion.css
@@ -277,3 +277,12 @@ ul.errorlist{
   font-style: italic;
   color: red;
 }
+
+.linksCategorias{
+  color: white;
+  text-decoration: underline;
+}
+
+.linksCategorias:hover{
+  text-decoration: none;
+}
