--- a/contacto/templates/contacto/contacto.html
+++ b/contacto/templates/contacto/contacto.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div>
-    <p style="color: white;">Estamos en contacto</p>
+    <p style="color: white;">{{miFormulario}}</p>
 </div>
 
 {% endblock %}
