[ADD]un poco de front a contacto

--- a/contacto/templates/contacto/contacto.html
+++ b/contacto/templates/contacto/contacto.html
@@ -4,8 +4,8 @@
 
 {% block content %}
 
-<div>
-    <p style="color: white;">{{miFormulario}}</p>
+<div class="contenedorFormulario">
+    <table style="color: white;">{{miFormulario.as_table}}</table>
 </div>
 
 {% endblock %}
