--- a/contacto/templates/contacto/contacto.html
+++ b/contacto/templates/contacto/contacto.html
@@ -5,7 +5,14 @@
 {% block content %}
 
 <div class="contenedorFormulario">
-    <table style="color: white;">{{miFormulario.as_table}}</table>
+
+    <form action="" method="post" style="text-align: center;">
+        {% csrf_token %}
+        <table style="color: white; margin: 20px auto;">{{miFormulario.as_table}}</table>
+        <input type="submit" value="Enviar" style="width: 150px;">
+    </form>
+   
+
 </div>
 
 {% endblock %}
