--- a/contacto/templates/contacto/contacto.html
+++ b/contacto/templates/contacto/contacto.html
@@ -6,6 +6,12 @@
 
 <div class="contenedorFormulario">
 
+    {% if "valido" in request.GET %}
+
+        <p style="color: white;">Informacion enviada correctamente, gracias</p>
+
+    {% endif %}
+
     <form action="" method="post" style="text-align: center;">
         {% csrf_token %}
         <table style="color: white; margin: 20px auto;">{{miFormulario.as_table}}</table>
@@ -14,5 +20,4 @@
    
 
 </div>
-
 {% endblock %}
