--- a/tienda/templates/tienda/tienda.html
+++ b/tienda/templates/tienda/tienda.html
@@ -4,8 +4,23 @@
 
 {% block content %}
 
-<div>
-    <p style="color: white;">Estamos en la tienda</p>
-</div>
+{% for producto in productos %}
+
+        <section class="page-section clearfix">
+            <div class="container">
+            <div class="intro">
+                <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="{{producto.imagen.url}}" alt="servicioimg" style="width: 50%;">
+                <div class="intro-text left-0 text-center bg-faded p-5 rounded">
+                <h2 class="section-heading mb-4" >
+                    <span class="section-heading-lower">{{producto.nombre}}</span>
+                    <span class="section-heading-upper">{{producto.precio}}</span>
+                </h2>            
+                </div>
+            </div>
+            </div>
+        </section>
+
+    {% endfor %}
+
 
 {% endblock %}
