--- a/tienda/templates/tienda/tienda.html
+++ b/tienda/templates/tienda/tienda.html
@@ -6,6 +6,10 @@
 
     <div class="container">
 
+        <div style="float: right;">
+            <p style="color: white;">Texto de prueba</p>
+        </div>
+
         <div class="row">
 
             {% for producto in productos %}
@@ -24,9 +28,16 @@
 
                         </div>
 
+                        <div class="card-footer text-center">
+
+                            <a href="#" class="btn btn-success">Agregar al carro</a>
+
+                        </div>
+
                     </div>
 
                 </div>
+
             {% endfor %}
 
         </div>
