--- a/tienda/templates/tienda/tienda.html
+++ b/tienda/templates/tienda/tienda.html
@@ -7,7 +7,7 @@
     <div class="container">
 
         <div style="float: right;">
-            <p style="color: white;">Texto de prueba</p>
+            <p style="color: white;">Total: {{importe_total_carro}} €</p>
         </div>
 
         <div class="row">
