[ADD]urls y widget de carro con un pelin de front

--- a/tienda/templates/tienda/tienda.html
+++ b/tienda/templates/tienda/tienda.html
@@ -7,7 +7,10 @@
     <div class="container">
 
         <div style="float: right;">
+
             <p style="color: white;">Total: {{importe_total_carro}} €</p>
+            {% include "carro/widget.html" %}
+
         </div>
 
         <div class="row">
@@ -30,7 +33,7 @@
 
                         <div class="card-footer text-center">
 
-                            <a href="#" class="btn btn-success">Agregar al carro</a>
+                            <a href="{% url 'carro:agregar' producto.id %}" class="btn btn-success">Agregar al carro</a>
 
                         </div>
 
