--- a/tienda/templates/carro/widget.html
+++ b/tienda/templates/carro/widget.html
@@ -34,8 +34,8 @@
                     <td>{{value.cantidad}}</td>
                     <td>
 
-                        <a href="{% url 'carro:agregar value.producto_id' %}" class="btn btn-sm btn-success">+</a>
-                        <a href="{% url 'carro:restar value.producto_id' %}" class="btn btn-sm btn-success">-</a><br/>
+                        <a href="{% url 'carro:agregar' value.producto_id %}" class="btn btn-sm btn-success">+</a>
+                        <a href="{% url 'carro:restar' value.producto_id %}" class="btn btn-sm btn-success">-</a><br/>
 
                         {{value.precio}} €
 
