--- a/autenticacion/templates/login/login.html
+++ b/autenticacion/templates/login/login.html
@@ -12,6 +12,20 @@
         
         <div style="width: 75%; margin: auto;">
 
+            {% if messages %}
+
+                {% for msg in messages %}
+
+                    <span class="alert alert-{{msg.tags}}">
+                        {{msg}}
+                    </span>
+
+                {% endfor %}
+
+            {% endif %}
+
+            <br><br><br>
+
             {{form|crispy}}
 
             <button type="submit" class="btn btn-success">Login</button>
