--- a/tienda/templates/carro/widget.html
+++ b/tienda/templates/carro/widget.html
@@ -77,6 +77,20 @@
 
         </tr>
 
+        {% if request.session.carro.items %}
+
+            <tr>
+
+                <td colspan="3" style="text-align: center;">
+
+                    <a href="#" class="btn btn-success">Hacer Pedido</a>
+
+                </td>
+
+            </tr>
+
+        {% endif %}
+        
     </tfoot>
 
 </table>
